<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guidebook</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_viewguide">View guidebook</string>
    <string name="title_activity_read_guide">Guidebook</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <string name="action_play">Play</string>
    <string name="action_stop">Stop</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_list">List</string>
    <string name="action_search">Search</string>
    <string name="action_bookmark">Add bookmark</string>
    <string name="action_delete">Delete</string>
    <string name="action_open">Open</string>

    <string name="msg_loading">Loading %s.</string>
    <string name="lbl_error_loading">Error loading guidebook</string>
    <string name="msg_guide_not_available">Guidebook not available.</string>
    <string name="msg_guide_language_not_available">Guidebook locale %s not available.</string>
    <string name="msg_tts_not_available">Text To Speech engine cannot be loaded.</string>
    <string name="msg_tts_initializing">Initializing Text To Speech engine.</string>

    <string name="msg_bookmark_saved">Bookmark added successfully.</string>
    <string name="msg_bookmark_not_saved">Bookmark cannot be added.</string>

    <string name="pref_gdi_autoplay">Auto play</string>
    <string name="pref_gdi_autoplay_summary">Defines whether start playing guidebooks automatically.</string>
    <string name="pref_gdi_pitch">Pitch</string>
    <string name="pref_gdi_pitch_summary">Sets the speech pitch for the text to speech engine.</string>
    <string name="pref_gdi_speechrate">Speech rate</string>
    <string name="pref_gdi_speechrate_summary">Sets the speech rate for the text to speech engine.</string>

    <string name="title_dialog_delete">Delete guidebook</string>
    <string name="msg_dialog_delete">Are you sure you want to delete the guidebook %s?</string>
    <string name="msg_guidebook_deleted">Guidebook %s has been deleted.</string>

    <string name="html_about"><![CDATA[
        <h2>${app_name} ${app_version}</h2>
        <p>
        Guidebook is an Android application that reads audioguides using Text-to-Speech services.
        </p>
        <h2>License</h2>
        <p>Licensed under the GNU General Public License, Version 3.0.</p>
        <p style="text-align:justify;">
        Copyright &copy; 2013 Adrián Romero Corchado.
        </p>
        <p style="text-align:justify;">
        <a href="https://github.com/adrianromero/guides">https://github.com/adrianromero/guides</a>
        </p>
    ]]></string>

    <string name="ex_guidebookneedstitle">Guidebook needs to have a title.</string>
    <string name="ex_guidebookneedslanguage">Guidebook needs to have a language.</string>
    <string name="ex_guidebookneedschapters">Guidebook needs to have at least one chapter.</string>
    <string name="ex_chaptersneedtitle">All chapters need to have a title.</string>
    <string name="ex_chaptersneedparagrahps">All chapters nees to have at least one paragraph.</string>
    <string name="ex_paragraphsneedwords">All paragraphs need to have at leat one word.</string>
    <string name="ex_cannotaddtext">Cannot add text to an empty guide.</string>
    <string name="ex_imagenotfound">Refered image has not been found.</string>

</resources>
