<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_playpause"
          android:title="@string/action_play"
          android:icon="@drawable/ic_media_play"
          android:orderInCategory="10"
          android:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_search"
          android:title="search"
          android:icon="@drawable/ic_menu_search"
          android:orderInCategory="20"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_next"
          android:title="@string/action_next"
          android:icon="@drawable/ic_media_ff"
          android:orderInCategory="30"/>

    <item android:id="@+id/action_previous"
          android:title="@string/action_previous"
          android:icon="@drawable/ic_media_rew"
          android:orderInCategory="40"/>

    <item android:id="@+id/action_first"
          android:title="@string/action_first"
          android:icon="@drawable/ic_media_previous"
          android:orderInCategory="50"/>

    <item android:id="@+id/action_list"
          android:title="@string/action_list"
          android:orderInCategory="60"/>


</menu>
